@@ -337,6 +337,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * The maxage and smaxage parameters are now properly validated
 * (bug 15945) list=recentchanges doesn't check $wgUseRCPatrol, $wgUseNPPatrol
   and patrolmarks right
+* (bug 15985) acfrom and aifrom parameters didn't work when sorting in
+  descending order.
 
 === Languages updated in 1.14 ===
 
